# testsh

./: .bazelrc  .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md
src/: builtin.cpp  builtin.h  exec_prog.cpp  exec_prog.h  executor.cpp  executor.h  job.cpp  job.h  main.cpp  shell.cpp  shell.h  syntax.cpp  syntax.h  tokenizer.cpp  tokenizer.h  util.cpp  util.h
src/builtin/: builtin.cpp  builtin.h  cd.cpp  cd.h
src/parser/: executor.cpp  executor.h  syntax.cpp  syntax.h  tokenizer.cpp  tokenizer.h
src/tokenizer/: tokenizer.cpp  tokenizer.h
