cc_binary(
    name = "testsh",
    srcs = [
        "src/builtin/builtin.cpp",
        "src/builtin/builtin.h",
        "src/main.cpp",
        "src/util.h",
        "src/util.cpp",
        "src/parser/syntax.h",
        "src/parser/syntax.cpp",
        "src/parser/executor.h",
        "src/parser/executor.cpp",
        "src/parser/tokenizer.cpp",
        "src/parser/tokenizer.h",
    ],
    deps = [
        "@re2",
    ],
)
