cc_binary(
    name = "testsh",
    srcs = [
        "src/builtin.cpp",
        "src/builtin.h",
        "src/executor.cpp",
        "src/executor.h",
        "src/main.cpp",
        "src/syntax.cpp",
        "src/syntax.h",
        "src/tokenizer.cpp",
        "src/tokenizer.h",
        "src/util.cpp",
        "src/util.h",
    ],
    deps = [
        "@re2",
    ],
)
