cc_binary(
    name = "testsh",
    srcs = [
        "src/builtin.cpp",
        "src/builtin.h",
        "src/exec_prog.cpp",
        "src/exec_prog.h",
        "src/executor.cpp",
        "src/executor.h",
        "src/job.cpp",
        "src/job.h",
        "src/main.cpp",
        "src/shell.cpp",
        "src/shell.h",
        "src/syntax.cpp",
        "src/syntax.h",
        "src/tokenizer.cpp",
        "src/tokenizer.h",
        "src/util.cpp",
        "src/util.h",
    ],
    deps = [
        "@re2",
        "@cpptrace//:cpptrace",
    ],
)
